--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,119 @@ html {
 /*
     GENERAL
 */
+
 .container {
     max-width: 1000px;
     margin: 0 auto;
+    padding: 0 10px;
 }
 
+.my-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+}
+
+.my-row .my-col {
+    width: calc(100% - 20px);
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 20px;
+}
+
+/*
+    HEADER
+*/
+
+header {
+    background-color: #0084FD;
+    color: white;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-container:first-child {
+    padding: 10px 8px;
+}
+
+.mobile-menu {
+    padding: 4px 8px;
+}
+
+.desktop-menu {
+    display: none;
+}
+
+.desktop-menu ul {
+    list-style: none;
+}
+
+.desktop-menu ul li {
+    display: inline-block;
+}
+
+.desktop-menu ul li a:not(.a-button) {
+    display: inline-block;
+    padding: 4px 8px;
+    color: white;
+    text-decoration: none;
+}
+
+.a-button {
+    display: inline-block;
+    text-decoration: none;
+    width: 100px;
+    padding: 10px 0;
+    border-radius: 100px;
+    background-color: white;
+    color: black;
+    text-align: center;
+}
+
+/*
+    MAIN
+*/
+
+main .section {
+    padding: 40px 0;
+}
+
+#intro .card {
+    background-color: #B5DDFF;
+    border-radius: 12px;
+    padding: 10px;
+}
+
+/*
+    RESPONSIVE
+*/
+/* TABLET */
+@media screen and (min-width: 576px) {
+
+    .my-row .my-col-1-3 {
+        width: calc((100% / 3) - 20px);
+    }
+    
+    .my-row .my-col-2-3 {
+        width: calc(((100% / 3) * 2) - 20px);
+    }
+
+}
+
+/* DESKTOP */
+@media screen and (min-width: 992px) {
+    
+    .mobile-menu {
+        display: none;
+    }
+
+    .desktop-menu {
+        display: inline-block;
+    }
+
+}
