--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,14 @@ html {
     margin-bottom: 20px;
 }
 
+a {
+    text-decoration: none;
+}
+
+img {
+    width: 100%;
+}
+
 /*
     HEADER
 */
@@ -74,7 +82,6 @@ header {
     display: inline-block;
     padding: 4px 8px;
     color: white;
-    text-decoration: none;
 }
 
 .a-button {
@@ -100,6 +107,17 @@ main .section {
     background-color: #B5DDFF;
     border-radius: 12px;
     padding: 10px;
+}
+
+.my-col-2-3 a {
+    display: inline-block;
+    width: 200px;
+    padding: 10px 0;
+    border-radius: 100px;
+    background-color: #0084FD;
+    color: white;
+    text-align: center;
+    letter-spacing: 5px;
 }
 
 /*
