--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,11 @@ section {
     background-color: #333333;
 }
 
+.fa-quote-left,
+.fa-quote-right {
+    font-size: 1.7cap;
+}
+
 /*
     HEADER
 */
@@ -149,7 +154,7 @@ main .section {
 }
 
 .my-col-1-3 .card > * {
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .my-col-1-3 .card > *:not(p) {
@@ -218,11 +223,39 @@ main .section {
     padding: 20px 0;
 }
 
-
+.background-section-purple .container h2 {
+    color: white;
+    text-align: center;
+    padding-bottom: 20px;
+}
 
 .background-row-white {
     background-color: white;
-    border-radius: 50px;
+    border-radius: 20px;
+    padding: 40px;
+}
+
+.my-col-1-6-tablet > b {
+    font-size: 3cap;
+    color: #9792E4;
+}
+
+.my-col-1-6-tablet > h3 {
+    color: #9792E4;
+    padding: 20px 0;
+}
+
+.my-col-1-6-tablet > p {
+    color: grey;
+    padding-bottom: 20px;
+    line-height: 1.5;
+}
+
+.my-col-1-6-tablet > .button-purple {
+    color: white;
+    background-color: #9792E4;
+    padding: 10px 50px;
+    border-radius: 20px;
 }
 
 .white-button {
@@ -234,6 +267,51 @@ main .section {
     background-color: white;
     color: #9792E4;
     text-align: center;
+}
+
+.my-col .but-left h2 {
+    color: #9792E4;
+    font-size: 3cap;
+    padding: 30px 0;
+}
+
+.my-col .but-left p {
+    line-height: 1.8;
+    padding: 30px 0;
+}
+
+.my-col .but-right div {
+    position: relative;
+}
+
+.my-col .but-right img {
+    max-width: 50%;
+    border-radius: 50%;
+}
+
+.my-col .but-right .fa-solid {
+    font-size: 6cap;
+    color: #9792E4;
+    position: absolute;
+    right: 50%;
+    top: -10%;
+}
+
+.my-col .but-right h3 {
+    color: #9792E4;
+    margin: 20px 0;
+}
+
+.my-col .but-right .button-purple p {
+    display: inline;
+    background-color: #9792E4;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+.my-col .but-right .button-purple * {
+    padding: 5px;
 }
 
 /*
@@ -293,14 +371,17 @@ main .section {
         width: calc(((100% / 3) * 2) - 20px);
     }
 
-    .my-row .my-col-2-3-tablet .card > *:not(p) {
+    .my-row .my-col-2-3-tablet .card div > :not(p, h2) {
         width: 50%;
-        padding: 10px 0;
     }
 
     .my-row .my-col-2-3-tablet .card .a-button-blue {
-        width: 90%;
+        width: 100%;
         font-size: smaller;
+    }
+
+    .my-row .my-col-2-3-tablet .card h2 {
+        font-size: 1.6cap;
     }
 
     .my-row .my-col-1-2-tablet {
@@ -318,7 +399,35 @@ main .section {
 
     .my-col-1-2-tablet .right-tablet > * {
         text-align: left;
-        padding: 10px 10px;
+        padding: 20px 10px;
+    }
+
+    .my-row .my-col-1-6-tablet {
+        width: calc((100% / 2) - 20px);
+    }
+
+    .my-row .but-left-right-tablet {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .my-row .but-left-right-tablet .but-left {
+        width: 55%;
+    }
+
+    .my-row .but-left-right-tablet .but-right {
+        width: 40%;
+        padding-top: 40px;
+    }
+
+    .my-col .but-right .fa-solid {
+        font-size: 4cap;
+        right: 45%;
+        top: 0;
+    }
+
+    .my-col .but-right h3 {
+        width: 200px;
     }
 
 }
@@ -336,6 +445,29 @@ main .section {
 
     .desktop-menu {
         display: inline-block;
+    }
+
+    .my-row .my-col-2-3-tablet .card {
+        display: flex;
+        height: 100%;
+    }
+
+    .my-row .my-col-2-3-tablet .card > *{
+        width: 50%;
+    }
+
+    .my-row .my-col-2-3-tablet .card :last-child {
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
+    .my-row .my-col-2-3-tablet .card > :first-child {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: left;
+        padding-left: 20px;
     }
 
     .my-row .my-col-1-2-screen {
@@ -369,10 +501,19 @@ main .section {
     .my-row .my-col-1-2-tablet .right-tablet{
         width: 70%;
     }
-
-    .my-col-1-2-tablet .right-tablet > * {
-        text-align: left;
-        padding: 10px 10px;
-    }
     
+    .my-row .my-col-1-6-desktop {
+        width: calc((100% / 3) - 20px);
+    }
+
+    .my-col .but-right .fa-solid {
+        font-size: 5cap;
+        right: 50%;
+        top: 0;
+    }
+
+    .my-col .but-right h3 {
+        width: 200px;
+    }
+
 }
